[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/button.svg" type="Texture" id=2]
[ext_resource path="res://scenes/WFpanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Title.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/2DUI/Stasis.gd" type="Script" id=5]

[node name="Stasis" type="Control"]
modulate = Color( 0.109804, 0.780392, 0.780392, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.00012207
margin_bottom = 6.10352e-05
rect_clip_content = true
theme = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WFpanel" parent="." instance=ExtResource( 3 )]
anchor_left = 0.0212299
anchor_top = 0.0234375
anchor_right = 0.665447
anchor_bottom = 0.998698
border = false

[node name="MarginContainer" type="MarginContainer" parent="WFpanel"]
margin_right = 880.0
margin_bottom = 749.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 40

[node name="GridContainer" type="GridContainer" parent="WFpanel/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 850.0
margin_bottom = 709.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 4
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="stasisPod" type="TextureRect" parent="WFpanel/MarginContainer/GridContainer"]
margin_right = 120.0
margin_bottom = 80.0
rect_min_size = Vector2( 120, 80 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="WFpanel2" parent="." instance=ExtResource( 3 )]
anchor_left = 0.674231
anchor_top = 0.0173415
anchor_right = 0.990483
anchor_bottom = 0.99781
border = false

[node name="MarginContainer" type="MarginContainer" parent="WFpanel2"]
margin_right = 432.0
margin_bottom = 752.0
rect_clip_content = true
custom_constants/margin_right = 15
custom_constants/margin_top = 20
custom_constants/margin_left = 15
custom_constants/margin_bottom = 30

[node name="ScrollContainer" type="ScrollContainer" parent="WFpanel2/MarginContainer"]
margin_left = 15.0
margin_top = 20.0
margin_right = 417.0
margin_bottom = 722.0

[node name="VBoxContainer" type="VBoxContainer" parent="WFpanel2/MarginContainer/ScrollContainer"]
margin_right = 400.0
margin_bottom = 123.0
rect_min_size = Vector2( 400, 0 )

[node name="Label" type="Label" parent="WFpanel2/MarginContainer/ScrollContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 4 )
text = "  Crew "
autowrap = true

[node name="HSeparator" type="HSeparator" parent="WFpanel2/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 400.0
margin_bottom = 69.0

[node name="Line" type="Control" parent="WFpanel2/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 400.0
margin_bottom = 123.0
rect_min_size = Vector2( 0, 50 )
rect_clip_content = true

[node name="pod" type="Label" parent="WFpanel2/MarginContainer/ScrollContainer/VBoxContainer/Line"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -17.0
margin_right = 8.0
margin_bottom = 17.0
text = "Pod1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="status" type="Label" parent="WFpanel2/MarginContainer/ScrollContainer/VBoxContainer/Line"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -86.0
margin_top = -17.0
margin_bottom = 17.0
text = "online"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WFpanel2/MarginContainer/ScrollContainer/VBoxContainer/Line"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.9089
margin_top = -17.0
margin_right = 80.0911
margin_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
text = "------------"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
[connection signal="finished" from="." to="." method="_on_Stasis_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
